[package]
name = "networking_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["fs", "macros", "sync"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive", "env"] }
libp2p = { version = "0.54", features = ["dns", "tokio", "noise", "yamux", "identify", "kad", "relay", "dcutr", "ping", "request-response", "gossipsub", "serde", "autonat", "quic"] }
libp2p-connection-limits = "0.4"
libp2p-swarm-derive = "0.35"
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
lru = "0.12"
futures-core = "0.3"
futures-bounded = "0.2.4"
bimap = "0.6"
parking_lot = "0.12"
derivative = "2"
anyhow = "1.0.95"
log = "0.4.22"
futures = "0.3.31"
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait = "0.1.85"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
thiserror = "1"
env_logger = "0.11"


[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "test-util"] }
env_logger = "0.11"
